# endeavour

./: .gitignore  Cargo.toml  README.md
crates/endeavour-cli/: Cargo.toml
crates/endeavour-cli/src/: fmt.rs  lib.rs  main.rs  repl.rs
crates/endeavour-cli/src/auth/: anthropic.rs  mod.rs  openai_auth.rs  refresh.rs  resolver.rs  storage.rs
crates/endeavour-cli/src/commands/: analyze.rs  config.rs  connect.rs  detect_mba.rs  lift.rs  mod.rs  normalize.rs  session.rs  transcript.rs
crates/endeavour-cli/src/tui/: app.rs  event.rs  intent_router.rs  mod.rs  status_bar.rs
crates/endeavour-cli/tests/: anthropic_oauth.rs  cli.rs  e2e_smoke.rs  error_paths.rs  oauth_integration.rs  tui_integration.rs
crates/endeavour-core/: Cargo.toml
crates/endeavour-core/src/: config.rs  error.rs  lib.rs  loader.rs  models.rs  store.rs
crates/endeavour-core/tests/: fixtures_integration.rs  loader_integration.rs  loader_tests.rs  pipeline_integration.rs  store_tests.rs
crates/endeavour-frida/: Cargo.toml
crates/endeavour-frida/src/: lib.rs
crates/endeavour-ida/: Cargo.toml
crates/endeavour-ida/src/: client.rs  error.rs  lib.rs  types.rs
crates/endeavour-ida/tests/: fixture_parsing.rs
crates/endeavour-ir/: Cargo.toml
crates/endeavour-ir/fixtures/: ida_microcode_arm64_add_xor.json  ida_microcode_x86_64_branching.json
crates/endeavour-ir/src/: error.rs  ir.rs  lib.rs  normalize.rs  parser.rs
crates/endeavour-ir/src/frontend/: capstone.rs  ida.rs  mod.rs
crates/endeavour-ir/tests/: capstone_integration.rs  ida_integration.rs  ir_tests.rs  normalization_parity.rs
crates/endeavour-llm/: Cargo.toml
crates/endeavour-llm/src/: agentic.rs  anthropic.rs  anthropic_shim.rs  chunking.rs  context.rs  error.rs  ida_tool_executor.rs  lib.rs  mock.rs  oauth_refresh.rs  openai.rs  provider.rs  router.rs  types.rs
crates/endeavour-llm/tests/: agentic_loop_integration.rs
crates/endeavour-mba/: Cargo.toml
crates/endeavour-mba/src/: ast.rs  error.rs  lib.rs  matcher.rs  simplify.rs  verifier.rs
crates/endeavour-mba/tests/: mba_tests.rs
crates/endeavour-synthesis/: Cargo.toml
crates/endeavour-synthesis/src/: lib.rs
crates/endeavour-trace/: Cargo.toml
crates/endeavour-trace/src/: lib.rs
tests/fixtures/: build_fixtures.sh
tests/fixtures/ida_responses/: README.md  connection_test.json  decompile_complex.json  decompile_error.json  decompile_success.json  list_functions.json  search_matches.json
tests/fixtures/minimal_arm64/: binary
tests/fixtures/minimal_x86_64/: binary
tests/fixtures/objc_classes/: binary
tests/fixtures/src/: Animal.h  Animal.m  Cat.h  Cat.m  Dog.h  Dog.m  Runnable.h  main_objc.m
