[package]
name = "endeavour-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "endeavour"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reedline.workspace = true
owo-colors.workspace = true
unicode-width.workspace = true
tokio.workspace = true
uuid.workspace = true
endeavour-core = { path = "../endeavour-core" }
endeavour-ida = { path = "../endeavour-ida" }

[dev-dependencies]
assert_cmd = "2"
async-trait.workspace = true
serde_json.workspace = true

[lints]
workspace = true
