[package]
name = "endeavour-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
z3-verifier = ["endeavour-mba/z3-verifier"]

[[bin]]
name = "endeavour"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reedline.workspace = true
owo-colors.workspace = true
unicode-width.workspace = true
tokio.workspace = true
futures-util.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
endeavour-core = { path = "../endeavour-core" }
endeavour-ida = { path = "../endeavour-ida" }
endeavour-llm = { path = "../endeavour-llm" }
endeavour-ir = { path = "../endeavour-ir" }
endeavour-mba = { path = "../endeavour-mba", default-features = false }

[dev-dependencies]
assert_cmd = "2"
async-trait.workspace = true
serde_json.workspace = true
tempfile = "3"

[lints]
workspace = true
