[package]
name = "endeavour-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
uuid.workspace = true
goblin.workspace = true
memmap2.workspace = true

[lints]
workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile = "3"
