[package]
name = "endeavour-ir"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
capstone = "0.14.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true

[lints]
workspace = true
