[package]
name = "endeavour-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-openai.workspace = true
async-trait.workspace = true
futures-core.workspace = true
futures-util.workspace = true
thiserror.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
endeavour-core = { path = "../endeavour-core" }

[lints]
workspace = true
